<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/hint_player_name"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:rotationX="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_game_hint"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/btn_scissor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:checked="true"
            android:text="@string/android_text" />

        <RadioButton
            android:id="@+id/btn_stone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/android_text2" />

        <RadioButton
            android:id="@+id/btn_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/android_text3" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_mora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/android_text4"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="130dp"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"

        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_text_name"
        android:layout_marginStart="24dp"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="183dp"
        app:layout_constraintStart_toStartOf="@+id/btn_mora"
        app:layout_constraintTop_toBottomOf="@+id/btn_mora"   />

    <TextView
        android:id="@+id/tv_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/android_text_winner"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="@+id/tv_name"  />

    <TextView
        android:id="@+id/tv_mmora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/android_text_myChoice"
        app:layout_constraintStart_toEndOf="@+id/tv_winner"
        app:layout_constraintTop_toTopOf="@+id/tv_winner" />

    <TextView
        android:id="@+id/tv_Cmora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/android_text_computerChoice"
        app:layout_constraintStart_toEndOf="@+id/tv_mmora"
        app:layout_constraintTop_toTopOf="@+id/tv_mmora"/>


</androidx.constraintlayout.widget.ConstraintLayout>